# urdf_export_padbot

./: .gitignore  CMakeLists.txt  README.md  README.navigation.md  README_GITHUB.md  package.xml  setup.py
config/: joint_names_urdf_export_assem#3.SLDASM.yaml  map_server.yaml  nav2_params.yaml  nav2_rviz.rviz  slam_params.yaml
launch/: controller.launch.py  display.launch  display.launch.py  gazebo.launch  gazebo.launch.py  main.launch.py  navigation.launch  navigation.launch.py  robot_state_publisher.launch.py  ros1_navigation.launch.py  rviz.launch.py  simulation.launch.py
launch/includes/: amcl.launch.py  amcl.launch.xml  controller.launch.xml  move_base.launch.xml  nav2.launch.py
maps/: createMap.py  map.pgm
meshes/: Back_MDW_frame_link.STL  Back_MDW_wheel_link.STL  Front_MDW_frame_link.STL  Front_MDW_wheel_link.STL  IMU_link.STL  Left_wheel_link.STL  Lidar_link.STL  Right_wheel_link.STL
param/: costmap_common.yaml  costmap_global.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.yaml
params/: nav2_params.yaml
rviz/: navigation.rviz  robot.rviz  slam.rviz
src/: differential_drive_controller.py
urdf/: macros.xacro  materials.xacro  properties.xacro  robot.urdf.xacro  robot.xacro  urdf_export_assem#3.SLDASM.csv  urdf_export_assem#3.SLDASM.urdf
worlds/: empty.sdf  empty.world
